objects/ssot__LoyaltyTransactionJournal__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitActionProcessTypeId__c</fullName>
        <label>Benefit Action Process Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BookedFareClassId__c</fullName>
        <label>Booked Fare Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BookedRoomTypeId__c</fullName>
        <label>Booked Room Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BookingDate__c</fullName>
        <label>Booking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CouponId__c</fullName>
        <label>Coupon</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyId__c</fullName>
        <label>Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementId__c</fullName>
        <label>Engagement</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstablishmentName__c</fullName>
        <label>Establishment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialTransactionTypeId__c</fullName>
        <label>Financial Transaction Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlightNumber__c</fullName>
        <label>Flight Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Transaction Journal Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryId__c</fullName>
        <label>Industry</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndustryTypeText__c</fullName>
        <label>Industry Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__JournalDate__c</fullName>
        <label>Journal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalSubtypeId__c</fullName>
        <label>Loyalty Journal Subtype</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyJournalTypeId__c</fullName>
        <label>Loyalty Journal Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCorporateMemberId__c</fullName>
        <label>Loyalty Program Corporate Member</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramPartnerId__c</fullName>
        <label>Loyalty Program Partner</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramReferredMemberId__c</fullName>
        <label>Loyalty Program Referred Member</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTransactionJournalStatus__c</fullName>
        <label>Loyalty Transaction Journal Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferId__c</fullName>
        <label>Offer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodTypeId__c</fullName>
        <label>Payment Method Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryId__c</fullName>
        <label>Product Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonText__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RedeemedPointsExpiryInfoText__c</fullName>
        <label>Redeemed Points Expiration Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferralCodeText__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferralId__c</fullName>
        <label>Referral</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedLoyaltyTransactionJournalId__c</fullName>
        <label>Related Loyalty Transaction Journal</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesChannelId__c</fullName>
        <label>Sales Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductId__c</fullName>
        <label>Sales Order Product</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionAmount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionLocationName__c</fullName>
        <label>Transaction Location Name</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionQuantityUOM__c</fullName>
        <label>Transaction Quantity UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionQuantity__c</fullName>
        <label>Transaction Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TravelDestinationName__c</fullName>
        <label>Travel Destination Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelDistanceNumber__c</fullName>
        <label>Travel Distance Number</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TravelDistanceUOM__c</fullName>
        <label>Travel Distance UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelOriginName__c</fullName>
        <label>Travel Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TraveledFareClassId__c</fullName>
        <label>Traveled Fare Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherCodeText__c</fullName>
        <label>Voucher Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761150145_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_LoyaltyTransac_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_LoyaltyTransac_rel</relationshipLabel>
        <relationshipName>rel_1697761150145_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761154628_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand_Id_map_LoyaltyTransactionJourn_rel</label>
        <referenceTo>ssot__Brand__dlm</referenceTo>
        <relationshipLabel>Brand_Id_map_LoyaltyTransactionJourn_rel</relationshipLabel>
        <relationshipName>rel_1697761154628_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761155088_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BundleProduct_Id_map_LoyaltyTransact_rel</label>
        <referenceTo>ssot__BundleProduct__dlm</referenceTo>
        <relationshipLabel>BundleProduct_Id_map_LoyaltyTransact_rel</relationshipLabel>
        <relationshipName>rel_1697761155088_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>